Fix a css link covering issue due to margin

--- a/src/components/style.css
+++ b/src/components/style.css
@@ -36,7 +36,7 @@ a.right_link {
   display: inline-block;
 
   margin: 5px;
-  margin-top: 3.5rem;
+  margin-top: 1rem;
   margin-bottom: 20px;
   padding: 24px;
 
@@ -64,8 +64,12 @@ a.right_link {
 
 .card_container {
   background-color: #323232;
+  margin-bottom: 6rem;
 }
 
 .navbar_bottom {
-  margin-bottom: -2.2rem;
+  margin-bottom: -3rem;
+  padding-top: 1.5rem;
+  padding-bottom: 5rem;
+  background-color: #323232;
 }
